server up and working

--- a/Client/index.html
+++ b/Client/index.html
@@ -4,6 +4,13 @@
   </head>
 
   <body>
-    <h1>HELLO WORLD!</h1>
+
+    <div class='header'>
+      <h1>HELLO WORLD!</h1>
+    </div>
+
+    <div class='feed'>
+    </div>
+
   </body>
 </html>
