--- a/Client/index.html
+++ b/Client/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <script src="../bower_components/mithril/mithril.min.js"></script>
+    <script src="Modules/signup.js"></script>
     <title>DevMeet</title>
   </head>
 
@@ -9,8 +11,12 @@
       <h1>HELLO WORLD!</h1>
     </div>
 
-    <div class='feed'>
-    </div>
+    <div id="signup"></div>
+    <div id="signin"></div>
+    <div id="saved"></div>
+
+    <script>m.module(document.getElementById('signup'), Signup)</script>
+
 
   </body>
 </html>
