--- a/Client/index.html
+++ b/Client/index.html
@@ -13,7 +13,7 @@
     <div id="signin"></div>
     <div id="saved"></div>
 
-    <script src="lib/mithril/mithril.min.js"></script>
+    <script src="vendor/mithril.min.js"></script>
     <script src="Modules/signup.js"></script>
     <script type="text/javascript">
       m.module(document.getElementById('signup'), Signup)
