--- a/Client/index.html
+++ b/Client/index.html
@@ -12,8 +12,9 @@
     <div id="signup"></div>
     <div id="signin"></div>
     <div id="saved"></div>
+    <div id="feed"></div>
 
-    <script src="vendor/mithril.min.js"></script>
+    <script src="vendor/mithril.js"></script>
     <script src="Modules/signup.js"></script>
     <script type="text/javascript">
       m.module(document.getElementById('signup'), Signup)
