Working feed with test data

--- a/Client/index.html
+++ b/Client/index.html
@@ -16,8 +16,10 @@
 
     <script src="vendor/mithril.js"></script>
     <script src="Modules/signup.js"></script>
+    <script src="Modules/feed.js"></script>
     <script type="text/javascript">
-      m.module(document.getElementById('signup'), Signup)
+      m.module(document.getElementById('signup'), Signup);
+      m.module(document.getElementById('feed'), feed);
     </script>
   </body>
 </html>
