Changed Hello World to DevMeetup

--- a/Client/index.html
+++ b/Client/index.html
@@ -6,7 +6,8 @@
   <body>
     
     <div class='header'>
-      <h1>Hello Devs!</h1>
+      <h1>DevMeetup</h1>
+      <h2>Connect with other devs</h2>
     </div>
 
     <div id='theView'>
