--- a/Client/index.html
+++ b/Client/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>DevMeet</title>
+    <link href="Styles/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   </head>
 
   <body>
@@ -21,7 +23,8 @@
     <script src="Modules/signup.js"></script>
     <script src="Modules/signin.js"></script>
     <script src="Modules/feed.js"></script>
-    <script src="Modules/profile.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript">
       // m.module(document.getElementById('signup'), Signup);
       // m.module(document.getElementById('feed'), feed);
