bootstrap view editing

--- a/Client/index.html
+++ b/Client/index.html
@@ -6,7 +6,7 @@
   <body>
     
     <div class='header'>
-      <h1>HELLO WORLD!</h1>
+      <h1>Hello Devs!</h1>
     </div>
 
     <div id='theView'>
