--- a/Client/index.html
+++ b/Client/index.html
@@ -8,8 +8,8 @@
   <body>
     
     <div class='header'>
-      <h1>DevMeetup</h1>
-      <h2>Connect with other devs</h2>
+      <h1>DevMeet</h1>
+      <h3>Connect with other devs</h3>
     </div>
 
     <div id='theView'>
@@ -23,8 +23,9 @@
     <script src="Modules/signup.js"></script>
     <script src="Modules/signin.js"></script>
     <script src="Modules/feed.js"></script>
+    <script src="Modules/profile.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <!--   // <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> -->
     <script type="text/javascript">
       // m.module(document.getElementById('signup'), Signup);
       // m.module(document.getElementById('feed'), feed);
@@ -39,7 +40,7 @@
         })
       }else{
         m.route(document.getElementById('theView'), '/', {
-         '/': Signin, 
+         '/': feed, 
          '/signup': Signup,
          '/signin': Signin,
          '/mymeetups': Signin
