fixed landing page

--- a/Client/index.html
+++ b/Client/index.html
@@ -29,7 +29,7 @@
       m.route.mode = 'hash'
 
       m.route(document.getElementById('theView'), '/', {
-       '/': feed, 
+       '/': Signin, 
        '/mymeetups': starred,
        '/signup': Signup,
        '/signin': Signin,
